--- a/assets/css/style-stationery.css
+++ b/assets/css/style-stationery.css
@@ -1,15 +1,16 @@
-body, html{
+body,
+html {
     scroll-behavior: smooth;
     height: 100%;
 }
 
-body{
+body {
     margin: 0px;
     padding: 0px;
 }
 
-section{
-    /* background-image: url(../images/cover2.png); */
+section {
+    background-image: url(../images/cover2.png);
     background-size: cover;
     background-position: center;
     background-repeat: no-repeat;
@@ -17,104 +18,7 @@ section{
     position: relative;
 }
 
-.topnav{
-    overflow: hidden;
-    background-color: #753422;
-    position: fixed;
-    top: 0;
-    height: 8%;
-    width: 100%;
-    display: flex;
-    z-index: 1;
-    justify-content: space-between;
-    align-items: center; 
-}
-
-/* Style the links inside navigation bar*/
-.topnav a{
-    float: left;
-    display: block;
-    color: #FFEBC9;
-    text-align: center;
-    padding: 14px 16px;
-    text-decoration: none;
-    font-size: 17px;
-}
-
-.topnav ul{
-    list-style: none;
-    display: flex;
-}
-
-/* Change the color of link on hover */
-.topnav a:hover{
-    background-color:#B05B3B;
-    color: #FFEBC9;
-    border-radius: 15px;
-
-}
-
-/* Style the "active" element to highlight the current page */
-.topnav a.active {
-    background-color: #B05B3B;
-    color: #FFEBC9;
-    border-radius: 15px;
-}
-
-.topnav .search-container{
-    float: right;
-}
-
-/* Style the search box inside the navigation bar */
-.topnav input[type=text] {
-    float: right;
-    padding: 6px;
-    border: none;
-    border-radius:5px;
-    width: 300px;
-    margin-top: 8px;
-    margin-right: 100px;
-    font-size: 17px;
-    background: #FFEBC9;
-    color: #753422;
-}
-
-.topnav .search-container button{
-    float: right;
-    padding: 6px 10px;
-    margin-top: 8px;
-    margin-right: -1px;
-    height: 32px;
-    background: #D79771;
-    font-size: 17px;
-    border: none;
-    border-radius: 5px;
-    cursor: pointer;
-}
-
-.topnav .search-container button:hover {
-    background: #B05B3B;
-}
-
-/* When the screen is less than 600px wide, stack the links and the search field vertically instead of horizontally */
-@media screen and (max-width: 600px) {
-    .topnav a .search-container{
-        float: none;
-    } 
-    .topnav input[type=text], .topnav .search-container button {
-      float: none;
-      display: block;
-      text-align: left;
-      width: 100%;
-      margin: 0;
-      padding: 14px;
-    }
-    .topnav input[type=text] {
-      border: 1px solid;
-    }
-}
-
-.stationery-container{
+.stationery-container {
     margin-top: -850px;
     padding: 0.1% 0;
     align-items: center;
@@ -122,7 +26,7 @@ section{
     position: absolute;
 }
 
-.stationery-container h1{
+.stationery-container h1 {
     font-family: calibri;
     font-weight: bold;
     color: #FFEBC9;
@@ -132,7 +36,7 @@ section{
     margin-top: -30px;
 }
 
-.stationery-container .box-stationery .box{
+.stationery-container .box-stationery .box {
     align-items: center;
     margin-left: 150px;
     margin-right: 200px;
@@ -141,7 +45,7 @@ section{
     justify-content: flex;
 }
 
-.stationery-container .box-stationery .box .stationery{
+.stationery-container .box-stationery .box .stationery {
     background: #753422;
     width: 250px;
     height: 305px;
@@ -152,12 +56,12 @@ section{
     margin-left: 120px;
 }
 
-.stationery-container .box-stationery .box img{
+.stationery-container .box-stationery .box img {
     margin-top: 15px;
     margin-left: 25%;
 }
 
-.stationery-container h4{
+.stationery-container h4 {
     font-family: calibri;
     font-weight: lighter;
     color: #FFEBC9;
@@ -167,7 +71,7 @@ section{
     text-align: center;
 }
 
-.stationery-container .box-stationery .box h2{
+.stationery-container .box-stationery .box h2 {
     text-align: center;
     font-family: calibri;
     font-weight: bold;
@@ -178,39 +82,7 @@ section{
     margin-right: 15px;
 }
 
-.stationery-container .box-stationery .box h1{
-    margin-top: -2px;
-    text-align: center;
-    font-family: calibri;
-    font-weight: bolder;
-    font-size: 20px;
-    color: #FFEBC9;
-    margin-right: 25px;
-    margin-left: 25px;
-    margin-bottom: 10px;
-}
- h4{
-    font-family: calibri;
-    font-weight: lighter;
-    color: #FFEBC9;
-    font-size: 15px;
-    margin-bottom: 10px;
-    margin-top: 5px;
-    text-align: center;
-}
-
-.stationery-container .box-stationery .box h2{
-    text-align: center;
-    font-family: calibri;
-    font-weight: bold;
-    font-size: 18px;
-    color: #D79771;
-    margin-top: 5px;
-    margin-left: 15px;
-    margin-right: 15px;
-}
-
-.stationery-container .box-stationery .box h1{
+.stationery-container .box-stationery .box h1 {
     margin-top: -2px;
     text-align: center;
     font-family: calibri;
